<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtmcompany"
        android:layout_width="72dp"
        android:layout_height="37dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="36dp"
        android:text="@string/company"
        app:layout_constraintStart_toEndOf="@+id/txtmname"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtmname"
        android:layout_width="74dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtmprice"
        android:layout_width="66dp"
        android:layout_height="33dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="36dp"
        android:text="@string/price"
        app:layout_constraintStart_toEndOf="@+id/txtmcompany"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>